--- a/index.html
+++ b/index.html
@@ -22,53 +22,58 @@
         <a href="./index.html" class="header-logo"
           ><span class="header-logo-web">Web</span>Studio</a
         >
-
-        <ul class="page-nav">
+        <ul class="nav">
           <li><a href="#studio" class="link">Studio</a></li>
           <li><a href="#portfolio" class="link">Portfolio</a></li>
           <li><a href="#contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="section-title">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
 
-      <section>
+      <section id="features" class="section-features">
         <h2 hidden>Features</h2>
-        <ul>
+        <ul class="features-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -76,17 +81,18 @@
         </ul>
       </section>
 
-      <section id="team">
-        <h2>Our Team</h2>
-        <ul>
+      <section id="team" class="section-team">
+        <h2 class="team-title">Our Team</h2>
+
+        <ul class="team-list">
           <li>
             <img
               src="./images/mark_guerrero_optimized_.jpg"
               alt="Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="person-title">Mark Guerrero</h3>
+            <p class="person-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -94,8 +100,8 @@
               alt="Tom Ford"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="person-title">Tom Ford</h3>
+            <p class="person-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -103,8 +109,8 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="person-title">Camila Garcia</h3>
+            <p class="person-text">Marketing</p>
           </li>
           <li>
             <img
@@ -112,22 +118,24 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="person-title">Daniel Wilson</h3>
+            <p class="person-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section id="portfolio">
-        <h2>Our Portfolio</h2>
-        <ul>
+
+      <section id="portfolio" class="section-portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+
+        <ul class="portfolio-list">
           <li>
             <img
               src="./images/portfolio_banking_app_optimized_.jpg"
               alt="Banking App"
               width="360"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="project-title">Banking App</h3>
+            <p class="project-text">App</p>
           </li>
           <li>
             <img
@@ -135,8 +143,8 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="project-title">Cashless Payment</h3>
+            <p class="project-text">Marketing</p>
           </li>
           <li>
             <img
@@ -144,8 +152,8 @@
               alt="Meditation App"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="project-title">Meditation App</h3>
+            <p class="project-text">App</p>
           </li>
           <li>
             <img
@@ -153,8 +161,8 @@
               alt="Taxi Service"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="project-title">Taxi Service</h3>
+            <p class="project-text">Marketing</p>
           </li>
           <li>
             <img
@@ -162,8 +170,8 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="project-title">Screen Illustrations</h3>
+            <p class="project-text">Design</p>
           </li>
           <li>
             <img
@@ -171,15 +179,17 @@
               alt="Online Courses"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="project-title">Online Courses</h3>
+            <p class="project-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo"
+        ><span class="footer-logo-web">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
