--- a/index.html
+++ b/index.html
@@ -17,34 +17,32 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html" class="header-logo"
-          ><span class="header-logo-web">Web</span>Studio</a
-        >
-        <ul class="nav">
-          <li><a href="#studio" class="link">Studio</a></li>
-          <li><a href="#portfolio" class="link">Portfolio</a></li>
-          <li><a href="#contacts" class="link">Contacts</a></li>
+        <a href="#" class="logo">Web<span class="logo-text">Studio</span></a>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="nav-link">Home</a></li>
+          <li><a href="#" class="nav-link">Portfolio</a></li>
+          <li><a href="#" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="address">
+      <address class="contact-info">
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@example.com" class="contact-link"
+              >info@example.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+1234567890" class="contact-link">+1234567890</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section class="section-title">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
 
       <section id="features" class="section-features">
@@ -85,7 +83,7 @@
         <h2 class="team-title">Our Team</h2>
 
         <ul class="team-list">
-          <li>
+          <li class="team-item">
             <img
               src="./images/mark_guerrero_optimized_.jpg"
               alt="Mark Guerrero"
@@ -94,7 +92,7 @@
             <h3 class="person-title">Mark Guerrero</h3>
             <p class="person-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/tom_ford_optimized_.jpg"
               alt="Tom Ford"
@@ -103,7 +101,7 @@
             <h3 class="person-title">Tom Ford</h3>
             <p class="person-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/camila_garcia_optimized_.jpg"
               alt="Camila Garcia"
@@ -112,7 +110,7 @@
             <h3 class="person-title">Camila Garcia</h3>
             <p class="person-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/daniel_wilson_optimized_.jpg"
               alt="Daniel Wilson"
@@ -186,9 +184,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"
-        ><span class="footer-logo-web">Web</span>Studio</a
-      >
+      <a href="#" class="logo">Web<span class="logo-text">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
