--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <a href="#" class="logo">Web<span class="logo-text">Studio</span></a>
         <ul class="nav-list">
-          <li><a href="./index.html" class="nav-link">Home</a></li>
+          <li><a href="./index.html" class="nav-link">Studio</a></li>
           <li><a href="#" class="nav-link">Portfolio</a></li>
           <li><a href="#" class="nav-link">Contacts</a></li>
         </ul>
@@ -29,12 +29,14 @@
       <address class="contact-info">
         <ul>
           <li>
-            <a href="mailto:info@example.com" class="contact-link"
-              >info@example.com</a
+            <a href="mailto:info@devstudio.com" class="contact-link"
+              >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+1234567890" class="contact-link">+1234567890</a>
+            <a href="tel:+110001111111" class="contact-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
