--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a href="#" class="logo">Web<span class="logo-text">Studio</span></a>
         <ul class="nav-list">
           <li><a href="./index.html" class="nav-link">Studio</a></li>
-          <li><a href="#" class="nav-link">Portfolio</a></li>
-          <li><a href="#" class="nav-link">Contacts</a></li>
+          <li><a href="" class="nav-link">Portfolio</a></li>
+          <li><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address class="contact-info">
