--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <header class="header">
       <nav>
-        <a href="#" class="logo">Web<span class="logo-text">Studio</span></a>
+        <a href="#" class="logo"
+          >Web<span class="logo-text-header">Studio</span></a
+        >
         <ul class="nav-list">
           <li><a href="./index.html" class="nav-link">Studio</a></li>
           <li><a href="" class="nav-link">Portfolio</a></li>
@@ -185,7 +187,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="#" class="logo">Web<span class="logo-text">Studio</span></a>
+      <a href="#" class="logo"
+        >Web<span class="logo-text-footer">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
