--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <ul class="team-list">
           <li class="team-item">
             <img
-              src="./images/mark_guerrero_optimized_.jpg"
+              src="images/mark_guerrero_optimized_.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -98,7 +98,7 @@
           </li>
           <li class="team-item">
             <img
-              src="./images/tom_ford_optimized_.jpg"
+              src="images/tom_ford_optimized_.jpg"
               alt="Tom Ford"
               width="264"
             />
@@ -107,7 +107,7 @@
           </li>
           <li class="team-item">
             <img
-              src="./images/camila_garcia_optimized_.jpg"
+              src="images/camila_garcia_optimized_.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -116,7 +116,7 @@
           </li>
           <li class="team-item">
             <img
-              src="./images/daniel_wilson_optimized_.jpg"
+              src="images/daniel_wilson_optimized_.jpg"
               alt="Daniel Wilson"
               width="264"
             />
