--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <ul class="team-list">
           <li class="team-item">
             <img
-              src="./images/mark_guerrero_optimized_.jpg"
+              src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -97,17 +97,13 @@
             <p class="person-text">Product Designer</p>
           </li>
           <li class="team-item">
-            <img
-              src="./images/tom_ford_optimized_.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
+            <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" />
             <h3 class="person-title">Tom Ford</h3>
             <p class="person-text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
-              src="./images/camila_garcia_optimized_.jpg"
+              src="./images/camila_garcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -116,7 +112,7 @@
           </li>
           <li class="team-item">
             <img
-              src="./images/daniel_wilson_optimized_.jpg"
+              src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
@@ -131,7 +127,7 @@
         <ul class="portfolio-list">
           <li>
             <img
-              src="./images/portfolio_banking_app_optimized_.jpg"
+              src="./images/portfolio_banking_app.jpg"
               alt="Banking App"
               width="360"
             />
@@ -140,7 +136,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio_cashless_payment_optimized_.jpg"
+              src="./images/portfolio_cashless_payment.jpg"
               alt="Cashless Payment"
               width="360"
             />
@@ -149,7 +145,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio_meditation_app_optimized_.jpg"
+              src="./images/portfolio_meditation_app.jpg"
               alt="Meditation App"
               width="360"
             />
@@ -158,7 +154,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio_taxi_service_optimized_.jpg"
+              src="./images/portfolio_taxi_service.jpg"
               alt="Taxi Service"
               width="360"
             />
@@ -167,7 +163,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio_screen_illustrations_optimized_.jpg"
+              src="./images/portfolio_screen_illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
             />
@@ -176,7 +172,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio_online_courses_optimized_.jpg"
+              src="./images/portfolio_online_courses.jpg"
               alt="Online Courses"
               width="360"
             />
